--- a/medlog/src/theme/variables.scss
+++ b/medlog/src/theme/variables.scss
@@ -10,7 +10,9 @@ $font-path: "../assets/fonts";
 // rtl styles in your app. For more info, please see:
 // http://ionicframework.com/docs/theming/rtl-support/
 $app-direction: ltr;
-
+$navy-blue: #025A7F;
+$light-blue:#7EA8BB;
+$text-input-wp-border-color:#7EA8BB;
 
 @import "ionic.globals";
 
